tests/paczka1/fuzzy1/23300022.err
Error in line 7: 5D3w A303 175,1
Error in line 14: e2jXOLJ4zR S416 80,5
Error in line 17: e2jXOLJ4zR S889 85,5
Error in line 25: KTyq A303 83,7
Error in line 30: 5D3w A303 13,4
Error in line 22: vzIqmAp S872 35,1
Error in line 21: S872 A303 90,3
